# oragami-composer

./: .env.example  .gitignore  README.md  docker-compose.yml  implementation-plan.md  project-spec.md  technical-spec.md
.clinerules/: project.md
backend/: .black  .flake8  alembic.ini  celery_beat.py  celery_worker.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_setup.py
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/algorithms/: __init__.py  executor.py  executor_completion.py  indicators.py
backend/app/api/routes/: auth.py  oauth.py
backend/app/auth/: dependencies.py  jwt.py  oauth_utils.py  password.py
backend/app/database/: connection.py  init_db.py
backend/app/graphql/: context.py  schema.py
backend/app/graphql/mutations/: __init__.py  auth.py  symphony.py
backend/app/graphql/queries/: __init__.py  symphony.py  trading.py  user.py
backend/app/graphql/subscriptions/: __init__.py  metrics.py  positions.py  trades.py
backend/app/graphql/types/: __init__.py  auth.py  symphony.py  trading.py  user.py
backend/app/integrations/: __init__.py  alpaca_client.py  alpha_vantage_client.py  eod_historical_client.py
backend/app/models/: __init__.py  backtest.py  performance.py  position.py  symphony.py  trade.py  user.py
backend/app/parsers/: __init__.py  schemas.py  symphony_parser.py  validator.py
backend/app/schemas/: alpaca.py  auth.py  market_data.py
backend/app/services/: alpaca_oauth_service.py  alpaca_trading_service.py  auth_service.py  data_cache_service.py  drift_calculation_service.py  error_handler_service.py  market_data_service.py  pubsub_service.py  rebalancing_service.py  subscription_manager.py  symphony_service.py  task_service.py  trading_service.py
backend/app/tasks/: __init__.py  algorithm_execution.py  error_tasks.py  market_data_tasks.py  position_tasks.py  symphony_scheduler.py  technical_indicators.py
backend/app/workers/: __init__.py
backend/tests/: test_algorithm_execution.py  test_celery_tasks.py  test_graphql_auth.py  test_graphql_subscriptions.py  test_market_data.py  test_symphony_algorithms.py  test_technical_indicators.py  test_trading_graphql.py
docker/: Dockerfile.backend  Dockerfile.frontend  (+1 more)
(+9 files in other folders)
